--- a/static/css/dispatch/order.css
+++ b/static/css/dispatch/order.css
@@ -6,7 +6,11 @@
   height: 81rem;
 }
 
-
+.orderExcelList {
+  display: flex;
+  width: 25rem;
+  justify-content: space-between;
+}
 
 
 
@@ -437,11 +441,11 @@
 
 .printBtn,
 .docmentBtn,
-.ExcelBtn {
+.excelBtn {
   background-color: #444;
 }
 
-.ExcelBtn {
+.excelBtn {
   width: 12rem;
 }
 
